# screen_qa_assistant

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
src/screen_qa_assistant/: __main__.py  main.py  models.py  paths.py
src/screen_qa_assistant/capture/: geometry.py  overlay.py  screenshot.py
src/screen_qa_assistant/desktop/: hotkey.py  single_instance.py
src/screen_qa_assistant/providers/: openai_compatible.py
src/screen_qa_assistant/services/: app_controller.py  session_manager.py  stream_worker.py
src/screen_qa_assistant/storage/: keyring_store.py  settings_store.py
src/screen_qa_assistant/ui/: answer_window.py  hotkey_recorder.py  launch_panel.py  settings_window.py  theme.py  tray_icon.py
tests/: test_app_controller.py  test_capture_overlay.py  test_desktop_helpers.py  test_hotkey_dispatch.py  test_hotkey_recorder.py  test_launch_feedback.py  test_models.py  test_openai_client.py  test_session_service.py  test_settings_window.py  test_storage.py  test_tray_icon.py  test_ui_smoke.py
